# RAG_Backend

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_FIX_V2.md  DEPLOYMENT_SUCCESS.md  DOCUMENT_UPLOAD.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  clear_demo.py  config_test.py  main.py  pyproject.toml  render-python.yaml  render.yaml  requirements-minimal.txt  requirements.txt  setup.py  start.sh  start_server.bat  test_api.py  test_document_upload.py  validate_deployment.py  workflow_example.py
app/: config.py  document_processor.py  embedding.py  llm_setup.py  models.py  routes.py  scraper.py  vectorstore.py
