[build-system]
requires = ["setuptools>=69.1.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-backend"
version = "1.0.0"
description = "RAG Backend with FastAPI, LangChain, and Mistral"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "gunicorn==21.2.0",
    "langchain==0.1.0",
    "langchain-community==0.0.10",
    "langchain-mistralai==0.0.1",
    "faiss-cpu==1.7.4",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.0.3",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "numpy==1.24.4",
    "pypdf2==3.0.1",
    "python-docx==1.1.0",
    "openpyxl==3.1.2",
    "markdown==3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
